<resources>
    <string name="app_name">Online Shopping</string>
    <string name="register">REGISTER</string>
    <string name="welcome_note">Welcome to SherryHomes</string>
    <string name="login">LOGIN</string>
    <string name="logo">SherryHomes</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="register_textview">Please fill in the details to egister on the app</string>
    <string name="emailRegister">Enter Email Address</string>
    <string name="names">Enter your names</string>
    <string name="phoneno">Telophone number</string>
    <string name="passwordtext">Enter password</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="fisrt_name">Fisrt Name*</string>
    <string name="second_name">Second Name*</string>
    <string name="email_address">Enter Email Address</string>
    <string name="lg_credentials">Please Enter your login Credentials</string>
    <string name="loading">Loading…</string>
    <string name="email_address2">Email Address*</string>
    <string name="password">Password*</string>
    <string name="hide_password_icon">Hide password icon</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_second_name">Enter your second name</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (DD/MM/YYYY)</string>
    <string name="select_date_of_birth_dd_mm_yyyy">Select Date of Birth (DD/MM/YYYY)</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="company_logo">Company logo</string>
    <string name="profile_default_logo">Profile default logo</string>
    <string name="email_icon">Email icon</string>
    <string name="date_of_birth_icon">Date of birth icon</string>
    <string name="gender_icon">Gender icon</string>
    <string name="phone_number_icon">Phone number icon</string>
</resources>