<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_textview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/firts_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_register"
            android:layout_marginTop="50dp"
            android:padding="6dp"

            android:text="@string/fisrt_name"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firts_name"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_first_name"
            android:background="@drawable/border"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/second_name"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/secondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/second_name"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/enter_your_second_name"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/r_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondName"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/email_address"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_email"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:hint="@string/enter_your_email_address"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />


        <TextView
            android:id="@+id/r_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/phone_number"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_phone"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:inputType="phone"
            android:hint="@string/enter_phone_number"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/r_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginTop="33dp"
            android:padding="6dp"
            android:text="@string/date_of_birth_dd_mm_yyyy"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_dob"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:hint="@string/select_date_of_birth_dd_mm_yyyy"
            android:inputType="date"
            android:focusable="false"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/r_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dob"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/gender"
            android:textColor="#555555"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rGregister_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_gender"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#555555"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/male"
                android:textColor="#555555"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rGregister_gender"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/password"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_password"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/rc_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/confirm_password"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/c_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rc_password"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_Registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c_password"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="70dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"
            />


    </RelativeLayout>
</ScrollView>