<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <ImageView
            android:id="@+id/image_log"
            android:layout_width="293dp"
            android:layout_height="107dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="39dp"
            android:adjustViewBounds="true"
            android:maxWidth="180dp"
            android:contentDescription="@string/company_logo"
            app:srcCompat="@drawable/img" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_log"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_note"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="45sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Login"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/txt_name"
            />

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Login"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />



    </RelativeLayout>

</ScrollView>